[package]
name = "bendsql"
description = "Databend Native Command Line Tool"
categories = ["database"]
keywords = ["databend", "database", "cli"]

version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
duckdb = { version = "0.10.2", features = ["bundled"]}

[dependencies]
chrono = { workspace = true }
databend-client = { workspace = true }
databend-driver = { workspace = true, features = ["rustls", "flight-sql"] }
tokio-stream = { workspace = true }

actix-web = "4.0"
anyhow = "1.0"
arrow = { workspace = true }
async-recursion = "1.1.0"
async-trait = "0.1"
clap = { version = "4.4", features = ["derive", "env"] }
comfy-table = "7.1"
csv = "1.3"
ctrlc = { version = "3.2.3", features = ["termination"] }
databend-common-ast = "0.2.1"
fern = { version = "0.6", features = ["colored"] }
indicatif = "0.17"
log = "0.4"
mime_guess = "2.0"
nom = "8.0.0"
once_cell = "1.18"
percent-encoding = "2.3"
rust-embed = "6.8.1"
rustyline = "12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
sqlformat = "0.3.3"
tempfile = "3.17.1"
terminal_size = "0.3"
tokio = { version = "1.34", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "parking_lot",
    "full",
] }
toml = "0.8"
tracing-appender = "0.2"
unicode-segmentation = "1.10"
url = { version = "2.5", default-features = false }
webbrowser = "1.0.1"

[build-dependencies]
vergen = { version = "8.2", features = ["build", "git", "gix"] }

[[bin]]
name = "bendsql"
path = "src/main.rs"
doctest = false
test = false
