[package]
name = "bendsql"
description = "Databend Native Command Line Tool"
categories = ["database"]
keywords = ["databend", "database", "cli"]

version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[dependencies]
chrono = { workspace = true }
databend-client = { workspace = true }
databend-driver-core = { workspace = true }
databend-driver = { workspace = true, features = ["rustls", "flight-sql"] }
tokio-stream = { workspace = true }

actix-session = { version = "0.11", features = ["cookie-session"] }
actix-web = "4.11"
anyhow = "1.0"
arrow = { workspace = true }
async-recursion = "1.1.1"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
comfy-table = "7.1"
csv = "1.3"
ctrlc = { version = "3.4.6", features = ["termination"] }
dashmap = "5.4.0"
databend-common-ast = "0.2.1"
fern = { version = "0.7", features = ["colored"] }
indicatif = "0.17"
log = "0.4"
mime_guess = "2.0"
nom = "8.0.0"
once_cell = "1.21"
percent-encoding = "2.3"
reqwest = { workspace = true }
rust-embed = "8.7.0"
rustyline = "15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
sqlformat = "0.3.3"
tempfile = "3.19.1"
terminal_size = "0.4"
tokio = { version = "1.44.2", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "parking_lot",
    "full",
] }
toml = "0.8"
tracing-appender = "0.2"
unicode-segmentation = "1.12"
unicode-width = "0.2.2"
url = { version = "2.5", default-features = false }
uuid = "1.18.1"

[build-dependencies]
vergen-gix = { version = "1.0.9", features = ["build"] }

[[bin]]
name = "bendsql"
path = "src/main.rs"
doctest = false
test = false
