[package]
name = "databend-client"
description = "Databend Client for Rust"
categories = ["database"]
keywords = ["databend", "database", "sdk"]

version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[features]
default = ["rustls"]

# Enable rustls for TLS support
rustls = ["reqwest/rustls-tls"]
# Enable native-tls for TLS support
native-tls = ["reqwest/native-tls"]

[dependencies]
tokio-stream = { workspace = true }

base64 = "0.22.1"
cookie = "0.18.1"
log = "0.4"
once_cell = "1.21"
parking_lot = "0.12.3"
percent-encoding = "2.3"
reqwest = { workspace = true }
semver = "1.0.14"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tokio = { version = "1.44", features = ["macros"] }
tokio-retry = "0.3"
tokio-util = { version = "0.7", features = ["io-util"] }
url = { version = "2.5", default-features = false }
uuid = { version = "1.16", features = ["std", "v4", "v7"] }

[dev-dependencies]
chrono = { workspace = true }
