[package]
name = "databend-driver"
description = "Databend Driver for Rust"
categories = ["database"]
keywords = ["databend", "database", "sdk"]

version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[features]
default = ["rustls"]

# Enable rustls for TLS support
rustls = ["databend-client/rustls"]
# Enable native-tls for TLS support
native-tls = ["databend-client/native-tls"]

flight-sql = [
    "dep:arrow-flight",
    "dep:arrow-schema",
    "dep:tonic",
    "databend-driver-core/flight-sql",
]

[dependencies]
arrow = { workspace = true }
arrow-flight = { workspace = true, optional = true }
arrow-schema = { workspace = true, optional = true }
chrono = { workspace = true }
databend-client = { workspace = true }
databend-driver-core = { workspace = true }
databend-driver-macros = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true, optional = true }

async-trait = "0.1"
csv = "1.3"
databend-common-ast = "0.2.1"
derive-visitor = { version = "0.4.0", features = ["std-types-drive"] }
glob = "0.3"
log = "0.4"
once_cell = "1.21"
percent-encoding = "2.3"
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tokio = { version = "1.34", features = ["macros"] }
url = { version = "2.5", default-features = false }

[dev-dependencies]
