[package]
name = "databend-driver-core"
description = "Core components for Databend Driver"
categories = ["database"]
keywords = ["databend", "database", "sdk"]

version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[features]
flight-sql = ["dep:arrow", "dep:arrow-array", "dep:arrow-schema", "dep:tonic", "dep:jsonb"]

[dependencies]
arrow = { workspace = true, optional = true }
arrow-array = { workspace = true, optional = true }
arrow-buffer = { workspace = true }
arrow-schema = { workspace = true, optional = true }
chrono = { workspace = true }
databend-client = { workspace = true }
jsonb = { workspace = true, optional = true }
tokio-stream = { workspace = true }
tonic = { workspace = true, optional = true }

geozero = { version = "0.14.0", features = ["with-wkb"] }
glob = "0.3"
hex = "0.4.3"
itertools = "0.14"
lexical-core = "1.0.5"
memchr = "2.7"
reqwest = { workspace = true }
roaring = { version = "0.10.12", features = ["serde"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
url = { version = "2.5", default-features = false }
