[package]
name = "databend-ttc"
description = "Databend Rust Tcp Test Container"
categories = ["database"]
keywords = ["databend", "database", "test", "cttttontainer"]

version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[dependencies]
databend-driver = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tokio = { version = "1.34", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "parking_lot",
    "full",
] }
clap = { version = "4.4", features = ["derive", "env"] }
bytes = "1"

[[bin]]
name = "ttc-server"
path = "src/server.rs"
doctest = false
test = false


[[bin]]
name = "ttc-client"
path = "src/client.rs"
doctest = false
test = false
