[package]
name = "databend-cpp"
publish = false

version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[dependencies]
cxx = "1.0"
chrono = { workspace = true }
databend-driver = { workspace = true, features = ["rustls", "flight-sql"] }
tokio-stream = { workspace = true }

[build-dependencies]
cxx-build = "1.0"
