[package]
name = "bendsql-java"
publish = false

edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]
doc = false

[dependencies]
anyhow = "1.0.71"
jni = "0.21.1"
once_cell = "1.19.0"
# this crate won't be published, we always use the local version
databend-driver = { version = ">=0", path = "../../driver"} 
databend-driver-core = { version = ">=0", path = "../../sql"} 
tokio = { version = "1.28.1", features = ["full"] }
tokio-stream = "0.1.11"
uuid = "1.3"
serde_json = "1.0.134"
