[package]
name = "databend-python"
publish = false

version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[lib]
crate-type = ["cdylib"]
name = "databend_driver"
doc = false

[dependencies]
chrono = { workspace = true }
databend-driver = { workspace = true, features = ["rustls", "flight-sql"] }
tokio-stream = { workspace = true }

csv = "1.3"
ctor = "0.2"
once_cell = "1.21"
pyo3 = { version = "0.24.1", features = ["abi3-py37", "chrono"] }
pyo3-async-runtimes = { version = "0.24", features = ["tokio-runtime"] }
tokio = "1.44"
