[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0,<2.0"]

[project]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
]
description = "Databend Driver Python Binding"
license = { text = "Apache-2.0" }
name = "databend-driver"
readme = "README.md"
requires-python = ">=3.7, < 3.14"
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/databendlabs/bendsql"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "databend_driver._databend_driver"
python-source = "package"

[dependency-groups]
dev = [
    "behave>=1.2.6",
    "maturin>=1.7.8",
    "ruff>=0.8.4",
]
